--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,4 +9,8 @@
       -ms-flex-direction: row;
           flex-direction: row;
 }
+
+.App .content {
+  width: calc(100% - 54px);
+}
 /*# sourceMappingURL=App.css.map */
