--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -19,4 +19,9 @@
 
     display: flex;
     flex-direction: row;
+
+    // 100% - visible collapsed navbar
+    .content {
+        width: calc(100% - 54px);
+    }
 }
