--- a/client/src/components/champions/index.css
+++ b/client/src/components/champions/index.css
@@ -4,7 +4,7 @@
   color: #eedab5;
   text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.5);
   padding: 32px;
-  font-size: 52px;
+  font-size: 40px;
   font-weight: 500;
   font-family: sans-serif;
 }
@@ -37,5 +37,6 @@
   font-weight: 300;
   padding: 0;
   margin: 8px;
+  text-align: center;
 }
 /*# sourceMappingURL=index.css.map */
