--- a/client/src/components/champions/index.scss
+++ b/client/src/components/champions/index.scss
@@ -8,7 +8,7 @@
         color: $primary-font-colour;
         text-shadow: $primary-text-shadow;
         padding: 32px;
-        font-size: 52px;
+        font-size: 40px;
         font-weight: 500;
         font-family: sans-serif;
 
@@ -30,5 +30,6 @@
         font-weight: 300;
         padding: 0;
         margin: 8px;
+        text-align: center;
     }
 }
