--- a/client/src/components/classes/index.css
+++ b/client/src/components/classes/index.css
@@ -4,9 +4,15 @@
   color: #eedab5;
   text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.5);
   padding: 32px;
-  font-size: 72px;
+  font-size: 48px;
   font-weight: 500;
   font-family: sans-serif;
+}
+
+@media (min-width: 768px) {
+  .classes .classes-title {
+    font-size: 72px;
+  }
 }
 
 .classes .classes-content {
