--- a/client/src/components/items/components/items-chart/components/item-card/index.css
+++ b/client/src/components/items/components/items-chart/components/item-card/index.css
@@ -11,10 +11,16 @@
           align-items: center;
   border: 1px solid rgba(255, 255, 255, 0.2);
   padding: 10px 5px;
-  width: 45%;
+  width: 100%;
   background: #555555;
   margin: 1px;
   color: #fffacd;
+}
+
+@media (min-width: 334px) {
+  .items-chart-card {
+    width: 45%;
+  }
 }
 
 @media (min-width: 480px) {
