--- a/client/src/components/items/components/items-chart/index.css
+++ b/client/src/components/items/components/items-chart/index.css
@@ -31,8 +31,14 @@
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   border: 1px solid rgba(255, 255, 255, 0.2);
-  margin: 0 16px 16px 16px;
+  margin: 0 6px 9px 6px;
   background: #555555;
+}
+
+@media (min-width: 768px) {
+  .items-chart .items-chart-base-items {
+    margin: 0 16px 16px 16px;
+  }
 }
 
 .items-chart .items-chart-card-base-img {
@@ -59,8 +65,15 @@
 
 .items-chart .items-chart-title {
   color: #fffacd;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 300;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .items-chart .items-chart-title {
+    font-size: 16px;
+  }
 }
 
 .items-chart .items-chart-content {
