--- a/client/src/components/navbar/index.css
+++ b/client/src/components/navbar/index.css
@@ -14,6 +14,7 @@
   transition: .25s ease-in-out;
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
           box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  z-index: 1;
 }
 
 .navbar.open {
