--- a/client/src/components/navbar/index.scss
+++ b/client/src/components/navbar/index.scss
@@ -10,6 +10,7 @@
     margin-left: -176px;
     transition: .25s ease-in-out;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    z-index: 1;
 
     &.open {
         margin-left: 0;
