--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,12 @@
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 body {
