--- a/client/src/components/navbar/index.css
+++ b/client/src/components/navbar/index.css
@@ -14,7 +14,7 @@
   transition: .25s ease-in-out;
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
           box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  z-index: 1;
+  z-index: 2;
 }
 
 .navbar.open {
@@ -30,7 +30,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  height: 100%;
   width: 230px;
+  background: #212527;
 }
 
 .navbar .navbar-items {
@@ -51,9 +53,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
   padding: 5px 8px;
 }
 
