--- a/client/src/components/items/index.scss
+++ b/client/src/components/items/index.scss
@@ -5,7 +5,7 @@
     .items-title {
         margin: 0;
         text-align: center;
-        color: $primary-font-colour;
+        color: $secondary-font-colour;
         text-shadow: $primary-text-shadow;
         padding: 32px 32px 0 32px;
         font-size: 48px;
