finished light mode styles, made light mode default, not yet added toggle to switch to dark mode

--- a/client/src/siteWrapper/site/components/championsWrapper/champions/components/drop-rates-table/index.scss
+++ b/client/src/siteWrapper/site/components/championsWrapper/champions/components/drop-rates-table/index.scss
@@ -134,7 +134,7 @@ $level-arrow-colour: #f9ba27;
 
 .light-theme {
     &.drop-rates-table {
-        color: $secondary-font-colour;
+        color: $font-primary-light;
     }
     
     // table stripes
