--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -11,6 +11,7 @@ $primary-text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0
 
 // light mode
 $font-primary-light: #373737;
+$font-secondary-light: #8a8a8a;
 
 
 
@@ -30,11 +31,6 @@ $background-primary-light: #ffffff;
 $background-secondary-light: #cacaca;
 $background-tertiary-light: #b7b1b1;
 
-
-
-// the colour secondary grey fades to (in simple item grid)
-$background-secondary-dark-fade: #666565;
-$background-tertiary-dark-fade: #535252;
 
 // dark greys
 //$background-primary-dark-grey: #12171a;
