--- a/client/src/siteWrapper/site/components/itemsWrapper/items/components/toggle/index.css
+++ b/client/src/siteWrapper/site/components/itemsWrapper/items/components/toggle/index.css
@@ -45,12 +45,7 @@
 }
 
 .toggle .toggle-label {
-  color: #262626;
   margin: 0 10px;
-}
-
-.toggle .toggle-label.toggle-active-text {
-  color: #fffacd;
 }
 
 .toggle .switch {
@@ -73,7 +68,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #555555;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -85,7 +79,6 @@
   width: 22px;
   left: 3px;
   bottom: 3px;
-  background-color: #828282;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -101,5 +94,37 @@
 
 .toggle .slider.round:before {
   border-radius: 50%;
+}
+
+.dark-theme .toggle-label {
+  color: #262626;
+}
+
+.dark-theme .toggle-label.toggle-active-text {
+  color: #fffacd;
+}
+
+.dark-theme .slider {
+  background: #555555;
+}
+
+.dark-theme .slider:before {
+  background: #828282;
+}
+
+.light-theme .toggle-label {
+  color: #8a8a8a;
+}
+
+.light-theme .toggle-label.toggle-active-text {
+  color: #373737;
+}
+
+.light-theme .slider {
+  background: #cacaca;
+}
+
+.light-theme .slider:before {
+  background: #ffffff;
 }
 /*# sourceMappingURL=index.css.map */
