--- a/client/src/siteWrapper/site/components/navbarWrapper/navbar/index.scss
+++ b/client/src/siteWrapper/site/components/navbarWrapper/navbar/index.scss
@@ -1,13 +1,16 @@
 @import "../../../../../styles/variables";
 @import "../../../../../styles/mixins/mediaQueries";
 
+$navbarWidth: 200px;
+$navbarClosedWidth: 54px;
+
 .navbar {
     display: flex;
     flex-direction: column;
-    min-width: 230px;
-    width: 230px;
-    margin-left: -176px;
-    transition: .25s ease-in-out;
+    min-width: $navbarWidth;
+    width: $navbarWidth;
+    margin-left: (-1) * ($navbarWidth - $navbarClosedWidth); //negative since we want it to close off the screen
+    transition: margin .25s ease-in-out;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     z-index: 2;
     &.open {
@@ -20,10 +23,13 @@
         display: flex;
         flex-direction: column;
         height: 100%;
-        width: 230px;
+        width: $navbarWidth;
     }
 
-    .navbar-items {
+    .navbar-body {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
         margin-top: 30px;
     }
 
@@ -51,7 +57,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: 20px 8px;
+        padding: 15px 8px;
         cursor: pointer;
     }
 
@@ -59,10 +65,41 @@
         margin: 0;
         padding: 0;
         font-weight: 300;
+        font-size: 19px;
     }
 
     .navbar-item-row-icon {
-        width: 40px;
+        width: 32px;
+    }
+
+    // settings divider styles
+    .settings:before {
+        content: " ";
+        width: calc(100% - 20px);
+        margin: 50px 10px 0 10px;
+    } 
+
+    // footer styles
+    .navbar-footer-row {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+
+        &:before {
+            content: " ";
+            width: calc(100% - 20px);
+            margin: 0 10px;
+            
+        }
+    }
+
+    .navbar-footer-patch {
+        padding: 10px;
+    }
+
+    .navbar-footer-last-updated-text {
+        font-size: 9px;
+        padding: 5px 0;
     }
 }
 
@@ -86,6 +123,22 @@
     .navbar-item-row-icon {
         fill: $font-primary-dark;
     }
+    // footer text
+    .navbar-footer-last-updated-text {
+        color: $font-primary-dark;
+    }
+    //footer divider bar
+    .navbar-footer-row:before {
+        border-top: 1px solid $background-secondary-dark;
+    }
+    // settings divider
+    .settings:before {
+        border-top: 1px solid $background-secondary-dark;
+    }
+    // footer path label
+    .navbar-footer-patch {
+        color: $font-primary-dark;
+    }
 }
 
 .light-theme {
@@ -107,5 +160,21 @@
     }
     .navbar-item-row-icon {
         fill: $font-primary-light;
+    }
+    // footer text
+    .navbar-footer-last-updated-text {
+        color: $font-primary-light;
+    }
+    //footer divider bar
+    .navbar-footer-row:before {
+        border-top: 1px solid $background-secondary-light;
+    }
+    // settings divider
+    .settings:before {
+        border-top: 1px solid $background-secondary-light;
+    }
+    // footer path label
+    .navbar-footer-patch {
+        color: $font-primary-light;
     }
 }
