--- a/client/src/siteWrapper/site/components/toggle/index.css
+++ b/client/src/siteWrapper/site/components/toggle/index.css
@@ -51,8 +51,6 @@
 .toggle .switch {
   position: relative;
   display: inline-block;
-  width: 54px;
-  height: 28px;
 }
 
 .toggle .switch input {
@@ -68,24 +66,23 @@
   left: 0;
   right: 0;
   bottom: 0;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  -webkit-transition-property: left, right, -webkit-transform;
+  transition-property: left, right, -webkit-transform;
+  transition-property: transform, left, right;
+  transition-property: transform, left, right, -webkit-transform;
 }
 
 .toggle .slider:before {
   position: absolute;
   content: "";
-  height: 22px;
-  width: 22px;
-  left: 3px;
-  bottom: 3px;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.toggle input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  -webkit-transition-property: left, right, -webkit-transform;
+  transition-property: left, right, -webkit-transform;
+  transition-property: transform, left, right;
+  transition-property: transform, left, right, -webkit-transform;
 }
 
 .toggle .slider.round {
@@ -94,6 +91,23 @@
 
 .toggle .slider.round:before {
   border-radius: 50%;
+}
+
+.toggle .switch {
+  width: 54px;
+  height: 28px;
+}
+
+.toggle .slider:before {
+  height: 22px;
+  width: 22px;
+  left: 3px;
+  bottom: 3px;
+}
+
+.toggle input:checked + .slider:before {
+  -webkit-transform: translateX(27px);
+  transform: translateX(27px);
 }
 
 .dark-theme .toggle-label {
