--- a/client/src/siteWrapper/site/components/toggle/index.scss
+++ b/client/src/siteWrapper/site/components/toggle/index.scss
@@ -1,5 +1,10 @@
-@import "../../../../../../../styles/variables";
-@import "../../../../../../../styles/mixins/mediaQueries";
+@import "../../../../styles/variables";
+@import "../../../../styles/mixins/mediaQueries";
+
+$toggleWidth: 54px;
+$toggleHeight: 28px;
+$ballSize: 22px;
+$ballOffset: 3px;
 
 .toggle {
     display: flex;
@@ -10,13 +15,10 @@
         margin: 0 10px;
     }
     
-
      /* The switch - the box around the slider */
     .switch {
         position: relative;
         display: inline-block;
-        width: 54px;
-        height: 28px;
     }
     
     /* Hide default HTML checkbox */
@@ -34,34 +36,15 @@
         left: 0;
         right: 0;
         bottom: 0;
-        -webkit-transition: .4s;
-        transition: .4s;
+        transition-duration: 0.4s;
+        transition-property: transform, left, right;
 
         &:before {
                 position: absolute;
                 content: "";
-                height: 22px;
-                width: 22px;
-                left: 3px;
-                bottom: 3px;
-                -webkit-transition: .4s;
-                transition: .4s;
+                transition-duration: 0.4s;
+                transition-property: transform, left, right;
         }
-    }
-
-    
-    // input:checked + .slider {
-    //     //background-color: #2196F3;
-    // }
-    
-    // input:focus + .slider {
-    //     //box-shadow: 0 0 1px #2196F3;
-    // }
-    
-    input:checked + .slider:before {
-        -webkit-transform: translateX(26px);
-        -ms-transform: translateX(26px);
-        transform: translateX(26px);
     }
     
     /* Rounded sliders */
@@ -73,7 +56,27 @@
         border-radius: 50%;
     } 
 }
+//sizes (defined seperately here to allow for easy copy when needing to override)
+.toggle {
+    .switch {
+        width: $toggleWidth;
+        height: $toggleHeight;
+    }
+    .slider:before {
+        height: $ballSize;
+        width: $ballSize;
+        left: $ballOffset;
+        bottom: $ballOffset;
+    }
 
+    input:checked + .slider:before {
+        -webkit-transform: translateX($toggleWidth / 2);
+        -ms-transform: translateX($toggleWidth / 2);
+        transform: translateX($toggleWidth / 2);
+    }
+}
+
+// theme colours
 .dark-theme {
     //inactive toggle text
     .toggle-label {
