added hide descriptions toggle

--- a/client/src/siteWrapper/site/components/itemsWrapper/items/components/itemsChartWrapper/itemsChart/components/item-card/index.css
+++ b/client/src/siteWrapper/site/components/itemsWrapper/items/components/itemsChartWrapper/itemsChart/components/item-card/index.css
@@ -59,6 +59,7 @@
 
 .items-chart-card .items-chart-card-title {
   text-align: center;
+  font-size: 14px;
 }
 
 .items-chart-card .items-chart-card-content {
