--- a/client/src/siteWrapper/site/components/classesWrapper/classes/components/classCardWrapper/classCard/index.css
+++ b/client/src/siteWrapper/site/components/classesWrapper/classes/components/classCardWrapper/classCard/index.css
@@ -24,9 +24,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   margin: 3px;
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
@@ -43,6 +42,11 @@
   text-align: center;
 }
 
+/**********************************************************
+*                                                         *
+*                       THEMES                            *
+*                                                         *
+***********************************************************/
 .dark-theme.class-card {
   color: #eedab5;
   background: #555555;
@@ -51,5 +55,14 @@
 .light-theme.class-card {
   color: #373737;
   background: #cacaca;
+}
+
+/**********************************************************
+*                                                         *
+*                    DESCRIPTIONS                         *
+*                                                         *
+***********************************************************/
+.hide-descriptions .class-card-description {
+  display: none;
 }
 /*# sourceMappingURL=index.css.map */
