--- a/client/src/siteWrapper/site/components/navbarWrapper/navbar/components/settingsWrapper/settings/index.css
+++ b/client/src/siteWrapper/site/components/navbarWrapper/navbar/components/settingsWrapper/settings/index.css
@@ -61,7 +61,10 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 3px 10px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 3px 23px 3px 10px;
 }
 
 .settings .settings-option-label {
