--- a/client/src/siteWrapper/site/components/navbarWrapper/navbar/components/settingsWrapper/settings/index.scss
+++ b/client/src/siteWrapper/site/components/navbarWrapper/navbar/components/settingsWrapper/settings/index.scss
@@ -31,7 +31,8 @@ $ballOffset: 2px;
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding: 3px 10px;
+        justify-content: space-between;
+        padding: 3px 23px 3px 10px;
     }
 
     .settings-option-label {
